changed a few things

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ footer {
     max-width: 1000px;
 }
 body{
-    background-color: rgba(63, 155, 40, 0.61);
+    background-color: white);
 }
 
 header {
