--- a/css/styles.css
+++ b/css/styles.css
@@ -108,3 +108,20 @@ section ul{
     font-weight: 500;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, -1px 0 0 #000;
 }
+* {box-sizing:border-box}
+
+ .container {
+   width: 100%;
+   background-color: #ddd;
+ }
+.skills {
+   text-align: right;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   color: #000;
+ }
+.java {width: 60%; background-color: green;}
+.html {width: 10%; background-color: yellowgreen;}
+.css {width: 5%; background-color: turquoise;}
+.js {width: 2%; background-color: violet;}
+.python {width: 65%; background-color: orangered;}
