--- a/css/styles.css
+++ b/css/styles.css
@@ -92,13 +92,6 @@ section ul{
     margin-bottom: 3em;
     display: table;
 }
-.banner {
-    background-image: 
-      linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)),
-      url(https://wallpaperforu.com/wp-content/uploads/2021/09/Coding-Wallpapers10.jpg);
-}
 
 .banner-head {
     display: table-cell;
@@ -108,61 +101,62 @@ section ul{
     font-weight: 500;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, -1px 0 0 #000;
 }
-* {box-sizing:border-box}
+
+
+*{box-sizing:border-box}
 
  .container {
    width: 100%;
    background-color: #ddd;
  }
- /* Style inputs with type="text", select elements and textareas */
+
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  }
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical 
+}
   
-  /* Style the submit button with a specific background color etc */
-  input[type=submit] {
+  
+input[type=submit] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
-  input[type=reset] {
+}
+input[type=reset] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
-  /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
+}
+input[type=submit]:hover {
     background-color: #45a049;
-  }
-  input[type=reset]:hover {
+}
+input[type=reset]:hover {
     background-color: #45a049;
-  }
-  /* Add a background color and some padding around the form */
-  .container {
+}
+  
+.container {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-  }
+}
   
 .skills {
    text-align: right;
    padding-top: 10px;
    padding-bottom: 10px;
    color: #000;
- }
+}
 .java {width: 60%; background-color: green;}
 .html {width: 10%; background-color: yellowgreen;}
 .css {width: 5%; background-color: turquoise;}
