--- a/css/styles.css
+++ b/css/styles.css
@@ -5,59 +5,79 @@
     margin: 0;
     padding: 0;
 }
+
 html{
     font-size: 16px;
+}
+.banner {
+    background: transparent url("/img/Featured-Image-1024x768.jpg") no-repeat center fixed;
+    background-size: cover;
+    text-align: center;
+    height: 600px;
+    width: 100%;
+    margin-bottom: 3em;
+    display: table;
+}
+.banner-head {
+    display: table-cell;
+    vertical-align:middle;
+    margin-bottom: 0;
+    color: white;
+    font-size: 30px;
+    text-shadow: 0.07em 0 black,0 0.07em black,-0.07em 0 black, 0 -0.07em black;
 }
 
 header,
 main,
 footer {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 1500px;
 }
 body{
     background-color: white;
 }
 
 header {
-    padding: 2em 0;
+    padding: 1em 0;
 }
-.banner h1{
-    font-size: 1.5em;
-    font-weight: 900;
-    font-style: italic;
-}
-
 header h1{
-    font-size: 2em;
+    font-size: 2.5em;
+    margin: 1em;
 }
 header span{
-    font-size: 1.5;
+    font-size: 1.5em;
+    margin: 1.5em;
     color: #999;
+    
 }
-
+.icon{
+    height: 40px;
+    width: auto;
+}
+.span{
+    margin: auto;
+}
 nav {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 3em;
+    height: 3.5em;
 
     display: flex;
     flex-flow: row;
-    justify-content: center;
-    background: #333;
+    justify-content:center;
+    background: rgb(8, 75, 151);
 }
-
 nav a {
     padding: .5em 2em;
     font-size: 1.685em;
+    font-weight: 600;
     text-decoration: none;
-    color: #fff;
+    color: black;
 }
-
 nav a:hover {
-    background: #666;
+    background: white;
 }
 section{
     margin: 1em 0;
@@ -80,85 +100,40 @@ section ul{
 }
 #projectlist article img{
     width: 100%;
-    border: 1px solid #333;
+    border: 10px solid rgb(8, 75, 151);
 }
-
-.banner {
-    background: transparent url(https://wallpaperforu.com/wp-content/uploads/2021/09/Coding-Wallpapers10.jpg) 0 0 no-repeat fixed;
-    text-align: center;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-    margin-bottom: 3em;
-    display: table;
-}
-
-.banner-head {
-    display: table-cell;
-    vertical-align: middle;
-    margin-bottom: 0;
-    color: white;
-    font-weight: 500;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, -1px 0 0 #000;
-}
-
+  
+.skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #000;
+ }
+ .java {width: 60%; background-color: green;}
+ .html {width: 10%; background-color: yellowgreen;}
+ .css {width: 5%; background-color: turquoise;}
+ .js {width: 2%; background-color: violet;}
+ .python {width: 65%; background-color: orangered;}
 
 *{box-sizing:border-box}
 
  .container {
    width: 100%;
-   background-color: #ddd;
- }
+   background-color: rgba(5, 34, 196, 0.582);
+}
+.container {
+    border-radius: 8px;
+    background-color: #f2f2f2;
+    padding: 10px;
+}
 
 input[type=text], select, textarea {
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 10px;
+    border: 1px solid rgb(8, 75, 151);
+    border-radius: 10px;
     box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-top: 5px;
+    margin-bottom: 10px;
     resize: vertical 
 }
-  
-  
-input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-input[type=reset] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-input[type=reset]:hover {
-    background-color: #45a049;
-}
-  
-.container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
-  
-.skills {
-   text-align: right;
-   padding-top: 10px;
-   padding-bottom: 10px;
-   color: #000;
-}
-.java {width: 60%; background-color: green;}
-.html {width: 10%; background-color: yellowgreen;}
-.css {width: 5%; background-color: turquoise;}
-.js {width: 2%; background-color: violet;}
-.python {width: 65%; background-color: orangered;}
