--- a/css/styles.css
+++ b/css/styles.css
@@ -1,138 +1,414 @@
-* {
-    font-family: sans-serif;
-    line-height: 1.6em;
+*,
+*::before,
+*::after {
     box-sizing: border-box;
+}
+
+
+/* custom properties */
+
+:root {
+    --font-family-primary: 'Source Sans Pro', sans-serif;
+    --font-family-secondary: 'Source Code Pro', monospace;
+    --font-weight-regular: 300;
+    --font-weight-bold: 900;
+    --color-light: #fff;
+    --color-dark: #292929;
+    --color-accent: #007ccf;
+    --font-style-h1: 3rem;
+    --font-style-h2: 2.25rem;
+    --font-style-h3: 1.25rem;
+    --font-style-body: 1rem;
+    --box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.651);
+}
+
+@media (min-width: 800px) {
+     :root {
+        --font-style-h1: 4.5rem;
+        --font-style-h2: 3.75rem;
+        --font-style-h3: 1.5rem;
+        --font-style-body: 1.125rem;
+    }
+}
+
+
+/* general styles */
+
+body {
+    background-color: var(--color-light);
+    color: var(--color-dark);
     margin: 0;
-    padding: 0;
+    font-family: var(--font-family-primary);
+    font-size: var(--font-style-body);
+    line-height: 1.6;
 }
 
-html{
-    font-size: 16px;
-}
-.banner {
-    background: transparent url("/img/Featured-Image-1024x768.jpg") no-repeat center fixed;
-    background-size: cover;
-    text-align: center;
-    height: 600px;
-    width: 100%;
-    margin-bottom: 3em;
-    display: table;
-}
-.banner-head {
-    display: table-cell;
-    vertical-align:middle;
-    margin-bottom: 0;
-    color: white;
-    font-size: 30px;
-    text-shadow: 0.07em 0 black,0 0.07em black,-0.07em 0 black, 0 -0.07em black;
-}
-.icon{
-    height: 40px;
-    width: auto;
-}
-header,
-main,
-footer {
-    margin: 0 auto;
-    max-width: 1500px;
-}
-body{
-    background-color: white;
-}
-
-header {
-    padding: 1em 0;
-}
-header h1{
-    font-size: 2.5em;
-    margin: 1em;
-}
-header span{
-    font-size: 1.5em;
-    margin: 1.5em;
-    color: #999;
-    
-}
-.span{
-    margin: auto;
-}
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 3.5em;
-
-    display: flex;
-    flex-flow: row;
-    justify-content:center;
-    background: rgb(8, 75, 151);
-}
-nav a {
-    padding: .5em 2em;
-    font-size: 1.685em;
-    font-weight: 600;
-    text-decoration: none;
-    color: black;
-}
-nav a:hover {
-    background: white;
-}
-section{
-    margin: 1em 0;
-    padding: 3em;
-    min-height: 20em;
-}
-section ul{
-    padding-left: 1.5em;
-}
-#projectlist{
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0,1fr));
-    grid-template-rows: auto;
-    grid-column-gap: 1em;
+img {
+    display: block;
     max-width: 100%;
 }
-#projectlist article{
-    background: #ccc;
-    padding: 1em;
+
+strong {
+    font-weight: var(--font-weight-bold);
 }
-#projectlist article img{
+
+:focus {
+    outline: 3px solid var(--color-accent);
+    outline-offset: 3px;
+}
+
+
+/* typography */
+
+h1,
+h2,
+h3 {
+    line-height: 1.1;
+    margin: 0;
+}
+
+h1 {
+    font-size: var(--font-style-h1);
+}
+
+h2 {
+    font-size: var(--font-style-h2);
+}
+
+h3 {
+    font-size: var(--font-style-h3);
+}
+
+.section__title {
+    margin-bottom: .25em;
+}
+
+.section__title--intro {
+    font-weight: var(--font-weight-regular);
+}
+
+.section__title--intro strong {
+    display: block;
+}
+
+.section__subtitle {
+    margin: 0;
+    font-size: var(--font-style-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--color-accent);
+    padding: .25em 1em;
+    font-family: var(--font-family-secondary);
+    margin-bottom: 1em;
+}
+
+.section__subtitle--work {
+    color: var(--color-accent);
+    font-weight: var(--font-weight-bold);
+    margin-bottom: 2em;
+}
+
+
+/* header */
+
+.header-nav {
+    position: fixed;
+    z-index: 3;
     width: 100%;
-    border: 10px solid rgb(8, 75, 151);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 1em;
+    padding-right: 1em;
+    background: var(--color-accent);
 }
-  
+
+.logo {
+    margin: 0 0 0 .45em;
+    max-width: 100px;
+    height: auto;
+}
+
+.nav {
+    list-style: none;
+    text-transform: uppercase;
+}
+
+.nav__list {
+    list-style: none;
+    text-decoration: none;
+    letter-spacing:
+}
+
+.nav__list {
+    display: flex;
+}
+
+.nav__link {
+    text-decoration: none;
+    display: block;
+    padding: .5em;
+    color: var(--color-light);
+}
+
+.nav__link:hover {
+    background: var(--color-dark);
+}
+
+@media (max-width: 600px) {
+    .logo {
+        margin: .25em 0;
+        align-self: left;
+    }
+    .nav {
+        flex-direction: column;
+    }
+}
+
+
+/* intro */
+
+.intro {
+    position: relative;
+    padding-top: 12em;
+    padding-bottom: 12em;
+}
+
+.intro__img {
+    box-shadow: var(--box-shadow);
+}
+
+.section__subtitle--intro {
+    display: inline-block;
+}
+
+@media (min-width: 800px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        grid-column-gap: 2em;
+        grid-template-areas: "img title" "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 1.5em);
+    }
+}
+
+
+/* about me */
+
+.about-me {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 5em;
+    padding-bottom: 2em;
+}
+
+.about-me__img {
+    box-shadow: var(--box-shadow);
+}
+
+@media (min-width: 600px) {
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: "title img" "subtitle img" "text img";
+        grid-column-gap: 2em;
+    }
+    .section__title--about {
+        grid-area: title;
+        display: inline-block;
+    }
+    .section__subtitle--about {
+        grid-column: 1 /-1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        height: 2em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: 200px +2em;
+    }
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+
+/* My Skills */
+
+.my-skills {
+    background-color: var(--color-dark);
+    background-image: url(../img/WallpaperDog-20518382.jpg);
+    background-size: 100% auto;
+    background-blend-mode: multiply;
+    color: var(--color-light);
+    text-align: center;
+    padding-top: 5.5em;
+    padding-bottom: 1em;
+}
+
+.section__title--skills {
+    color: var(--color-accent);
+    position: relative;
+}
+
+.section__title--skills::after {
+    content: '';
+    display: block;
+    width: 4em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--color-light);
+    opacity: 0.5;
+}
+
+.wcci-title {
+    text-size-adjust: 2rem;
+    position: relative;
+    margin: 5em 5em;
+}
+
+.wcci {
+    height: 60px;
+    display: block;
+    margin: 1em auto 1em;
+    justify-content: center;
+}
+
 .skills {
-    text-align: right;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #000;
- }
- .java {width: 60%; background-color: green;}
- .html {width: 10%; background-color: yellowgreen;}
- .css {width: 5%; background-color: turquoise;}
- .js {width: 2%; background-color: violet;}
- .python {width: 65%; background-color: orangered;}
-
-*{box-sizing:border-box}
-
- .container {
-   width: 100%;
-   background-color: rgba(5, 34, 196, 0.582);
-}
-.container {
-    border-radius: 8px;
-    background-color: #f2f2f2;
-    padding: 10px;
+    margin-bottom: 4em;
 }
 
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid rgb(8, 75, 151);
-    border-radius: 10px;
-    box-sizing: border-box;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    resize: vertical 
+.skill {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+    .skills {
+        display: flex;
+        justify-content: center;
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .skill+.skill {
+        margin-left: 3em;
+    }
+}
+
+
+/* my work */
+
+.my-work {
+    background-color: var(--color-dark);
+    color: var(--color-light);
+    text-align: center;
+    padding-top: 2em;
+    padding-bottom: 3em;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.project__item {
+    background: var(--color-accent);
+    overflow: hidden;
+}
+
+.project__img {
+    height: 400px;
+    transition: transform 750ms cubic-bezier(.5, 0, .5, 1);
+    opacity: 250ms linear;
+}
+
+.project__img:focus {
+    position: relative;
+    z-index: 2;
+}
+
+.project__img:hover,
+.project__item:focus .project__img {
+    transform: scale(1.2);
+    opacity: .5;
+}
+
+
+/* footer */
+
+.footer {
+    background: var(--color-dark);
+    color: var(--color-light);
+    text-align: center;
+    height: auto;
+    padding: 3em 0;
+    font-size: var(--font-style-h3);
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__link {
+    font-weight: var(--font-weight-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .6;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: -1em 0;
+    padding-top: 0;
+}
+
+.social-list__item {
+    margin: 0, 0.5em;
+    padding: 1.5em;
+}
+
+.icon {
+    height: 60px;
+    width: auto;
+    transition: transform 350ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.icon:hover {
+    transform: scale(1.7);
+}
+
+.social-list__link {
+    padding: .5em;
 }
